# ULICS

./: .gitignore  .luarc.json  CMakeLists.txt  LICENSE  LUA_API.md  README.md  VISION.md  build-correct.ps1  build.ps1  build_log.txt  clean.ps1  debug_scrollbar.txt  lua_log.txt  map_editor_log.txt  plan-phase-3.json  plan-phase-4.json  plan-phase-5.json  plan-phase-7.json  plan-ulics-2.json  plan-ulics.json  sprite_editor_log.txt
cartridges/: README.md
cartridges/TestGame/: README.md  config.json  main.lua  palette.pal
cartridges/api_test/: config.json  main.lua  map.json  palette.pal
cartridges/audio_test/: config.json  main.lua
cartridges/basic_sfx/: README.md  config.json  main.lua  sfx.json
cartridges/bouncing_ball/: config.json  main.lua
cartridges/font_test/: main.lua
cartridges/hello_world/: config.json  main.lua
cartridges/input_test/: config.json  main.lua
cartridges/jump_test/: config.json  main.lua
cartridges/platformer/: README.md  config.json  main.lua  main.lua.backup  test_minimal.lua
cartridges/pong/: README.md  config.json  main.lua
cartridges/test_animations/: animations.json  config.json  main.lua
cartridges/test_collision/: README.md  config.json  main.lua  palette.pal  spritesheet.flags.info
cartridges/test_map/: config.json  main.lua  map.json
config/: sprite_editor_recent.txt
docs/: CARTRIDGE_GENERATOR.md  CARTRIDGE_SPEC.md  KEY_BINDINGS.md  KNOWN_ISSUES_V1.0.md  LUA_API.md  MAP_FORMAT.md  MUSIC_FORMAT.md  PHASE_3_COMPLETE.md  SDL_MIXER_INTEGRATION_ANALYSIS.md  SESSION_SUMMARY_REFACTOR_2025-12-15.md  SPRITE_IMPORT_EXPORT_PLAN.md  SYSTEM_SPRITES.md  UI_SYSTEM.md  UNDO_REDO_PLAN.md  menu-system-final-report.md  rgb-color-system.md
docs/analysis/: SPRITE_EDITOR_REVIEW_SUMMARY.md  SPRITE_EDITOR_STATUS_ANALYSIS.md
docs/app/: CODE_EDITOR_EXTERNAL_RELOAD.md  CODE_EDITOR_FILE_EXPLORER.md  CODE_REVIEW_V1.0.md  DOCUMENTATION_REVIEW_V1.1.md  GLOBAL_UI_TOPBAR.md  IMPORT_EXPORT_COMPLETE.md  KEYBOARD_AND_CONTROLLER.md  KEY_BINDINGS.md  KNOWN_ISSUES_V1.0.md  MAP_FORMAT.md  MENU_SYSTEM_REFERENCE.md  PHASE_5.5_PLANNING.md  REFACTOR_COMPLETION_PLAN.md  SFX_FORMAT.md  SPRITE_EDITOR.md  SPRITE_EDITOR_ANIMATIONS.md  SPRITE_EDITOR_BARS_PLAN.md  SPRITE_EDITOR_FLAGS.md  SPRITE_EDITOR_ICON_TOOLBAR_PLAN.md  SPRITE_EDITOR_IMPROVEMENTS_COMPLETED.md  SPRITE_EDITOR_NEXT_IMPROVEMENTS.md  SPRITE_FORMAT.md  SPRITE_IMPORT_EXPORT_PLAN.md  UI_SYSTEM.md  menu-system-design.md  menu-system-progress.md
docs/bugfixes/: UNDO_LINE_RECT_FIX.md
docs/features/: MAP_EDITOR_PROGRESS.md  SPRITE_EDITOR_PENDING_FEATURES.md  SPRITE_EDITOR_ZOOM_PLAN.md
docs/sessions/: SESSION_IMPORT_EXPORT.md  SESSION_SPRITE_EDITOR_01.md  SESSION_SPRITE_POLISH_2025-12-20.md  SESSION_SUMMARY_2025-12-14.md  SESSION_SUMMARY_2025-12-15.md  SESSION_SUMMARY_CODEEDITOR_REFACTOR.md  SPRITE_EDITOR_ROADMAP.md
docs/status/: LAYOUT_VERTICAL_PENDIENTE.md  PROJECT_STATUS_2025-12-20.md  SPRITE_EDITOR_FINAL_FEATURES.md  SPRITE_EDITOR_POLISH_PROGRESS.md
plan/: plan-animations.json  plan-menu-system.json  plan-phase-3.json  plan-phase-4-toast-messages.json  plan-phase-4.json  plan-phase-6.json  plan-phase-8.json  plan-sprite-editor.json  plan-ulics.json
plan/completed/: plan-phase-4.json
src/: Engine.cpp  Engine.h  main.cpp
src/animation/: Animation.h  AnimationManager.cpp  AnimationManager.h
src/audio/: AudioManager.cpp  AudioManager.h  MusicPlayer.cpp  MusicPlayer.h  RingBuffer.h  SFXSynthesizer.cpp  SFXSynthesizer.h
src/capture/: GifRecorder.cpp  GifRecorder.h  Screenshot.cpp  Screenshot.h
src/cartridge/: Cartridge.h  CartridgeConfig.h  CartridgeLoader.cpp  CartridgeLoader.h  EmbeddedBootCartridge.h  EmbeddedCartridge.h  GameLoader.cpp  GameLoader.h
src/core/: Bootstrap.cpp  Bootstrap.h  Constants.h  Engine.cpp  Engine.h  Engine_Run_TEMP.cpp  FileSystem.cpp  FileSystem.h  HotReload.cpp  HotReload.h  Settings.cpp  Settings.h  Version.h
src/demos/: DemoGame.cpp  DemoGame.h
src/editor/: README.md
src/editor/rendering/: EditorRenderer.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
src/editor/text/: TextBuffer.cpp  TextBuffer.h  TextSelection.cpp  TextSelection.h  UndoRedoManager.cpp  UndoRedoManager.h
src/editor/ui/: Scrollbar.cpp  Scrollbar.h
src/game/: Game.h
src/input/: InputConstants.h  InputManager.cpp  InputManager.h
src/rendering/: AestheticLayer.cpp  AestheticLayer.h  EmbeddedFont.h  Map.cpp  Map.h  SpriteSheet.cpp  SpriteSheet.h  config.json  main.lua
src/scripting/: AnimationLuaAPI.cpp  EmbeddedScripts.h  LuaGame.cpp  LuaGame.h  ScriptingManager.cpp  ScriptingManager.h  ScriptingManager_LogError.cpp  SystemScripts.h
src/ui/: CodeEditor.cpp  CodeEditor.h  DebugConsole.cpp  DebugConsole.h  FileExplorer.cpp  FileExplorer.h  LuaSyntax.h  MapEditor.cpp  MapEditor.h  MapEditor_UndoRedo.cpp  MenuSystem.cpp  MenuSystem.h  SpriteEditor.cpp  SpriteEditor.h  SpriteEditor_AnimationModal.cpp  SpriteEditor_Animations.cpp  SpriteEditor_ResetPalette.cpp  SpriteEditor_UndoRedo.cpp  SystemColors.h  SystemSprites.cpp  SystemSprites.h  UISystem.cpp  UISystem.h
src/utils/: FileDialog.cpp  FileDialog.h
tests/: CartridgeLoader_test.cpp  GameLoader_test.cpp
tools/: alternative-palette.pal  build-correct.ps1  build.ps1  create_colored_spritesheet.ps1  create_spritesheet.ps1  create_spritesheet.py  create_spritesheet_improved.ps1  create_test_spritesheet.ps1  generate_system_sprites.cpp  new-cartridge.ps1  ulics.ps1
